# cuda-kernel-lab-codex

./: .gitignore  AGENTS.md  CMakeLists.txt  CODEX_PROMPT_LIBRARY.md  COURSE_SYLLABUS.md  MANIFEST.txt  Makefile  README.md  RUBRIC.md
.codex/: config.toml
docs/: benchmarking_methodology.md  codex_workflow.md  hardware_and_setup.md  interview_questions.md  lab_notebook_template.md  portfolio_guide.md  profiling_checklist.md  weekly_review_template.md
include/common/: cuda_check.cuh  cuda_timer.cuh  vector_utils.hpp
lessons/00_setup/: setup.ipynb
lessons/01_vector_add/: BENCHMARKS.md  CMakeLists.txt  NOTES.md  PROMPTS.md  README.md  vector_add.cu
lessons/02_reduction/: BENCHMARKS.md  CMakeLists.txt  NOTES.md  PROMPTS.md  README.md  reduction.cu
lessons/03_transpose/: NOTES.md  PROMPTS.md  README.md
lessons/04_scan_or_histogram/: NOTES.md  PROMPTS.md  README.md
lessons/05_tiled_matmul/: NOTES.md  PROMPTS.md  README.md
lessons/06_softmax/: NOTES.md  PROMPTS.md  README.md
lessons/07_layernorm_rmsnorm/: NOTES.md  PROMPTS.md  README.md
lessons/08_fused_bias_activation/: NOTES.md  PROMPTS.md  README.md
lessons/09_pytorch_custom_op/: NOTES.md  PROMPTS.md  README.md
lessons/10_depth_to_pointcloud/: BENCHMARKS.md  NOTES.md  PROMPTS.md  README.md
lessons/11_voxel_filter/: NOTES.md  PROMPTS.md  (+1 more)
prompts/: stage_00_setup.md  stage_01_fundamentals.md  stage_02_profiling.md  stage_03_inference.md  stage_04_framework_integration.md  stage_05_robotics.md  stage_06_capstone.md
scripts/: append_benchmark.py  init_lesson.py  make_lesson_report.py  record_env.py
(+15 files in other folders)
